code6/c_test_compat127.c.error
c_test_compat127.c:13:11: error: bit-field 'x' has non-integral type 'float'
   13 |     float x:3;
      |           ^ ~
1 error generated.
